tests/fixtures/invalid/float_rshift_int.py
# Cannot right shift Float and Int
x: float = 1.0 >> 1
